Edited event time keeps the old instance in the UI
It seems like a redraw (or something like that) is missing at calendar view after an appointment has been rescheduled to a date outside of current view.
I am using Evolution on Fedora 28 with an e-mail account hosted on Microsoft Exchange server 2010 by connecting with EWS to it.
$ rpm -qa "evolution*" evolution-help-3.28.3-1.fc28.noarch evolution-langpacks-3.28.3-1.fc28.noarch evolution-data-server-3.28.3-1.fc28.x86_64 evolution-ews-langpacks-3.28.3-2.fc28.noarch evolution-ews-3.28.3-2.fc28.x86_64 evolution-data-server-devel-3.28.3-1.fc28.x86_64 evolution-3.28.3-1.fc28.x86_64 evolution-data-server-langpacks-3.28.3-1.fc28.noarch
Steps to reproduce:
- in calendar an appointment, e.g. Monday from 10:00 to 14:00, has been created with Evolution
- in Evolution switch to 'Calendar' view (Evolution -- View -- Window -- Calendar)
- view mode is "Work Week" (Evolution -- View -- Current View -- Work Week View) and it displays the week in which the appointment is scheduled
- open the appointment's properties window (either double left click on appointment or right mouse button click on it -- Open Appointment)
- in properties window modify "Start time" to take place outside of current "work week", e.g. next Monday ; it does not make a difference whether you use the calendar applet or you enter the date manually
- in properties window click on: File -- Save and Close
- the appointment is still displayed in current calendar view on the old date and time; you can use the displayed appointment to open its properties window; it shows the old data
- if you switch the view mode or the week, the view is redrawn and the appointment is not shown on the old date anymore, it is shown on the new date
If you modify the start day to be within the same work view, the appointment is redrawn immediately. No need to switch week or view mode.