I#57 - Edited event time keeps the old instance in the UI

Closes https://gitlab.gnome.org/GNOME/evolution/issues/57